Fixed header cell left padding to align with blockly

--- a/demos/KAREL/style.css
+++ b/demos/KAREL/style.css
@@ -11,6 +11,7 @@ body {
     overflow: hidden;
 }
 h1 {
+    color: black;
     font-weight: normal;
     font-size: 140%;
 }
@@ -46,6 +47,9 @@ h1 {
     background-color: #43a252;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+}
+#headerandoptions {
+    padding-left: 5px;
 }
 
 /*Classes*/
